Fix bug on stretching image

--- a/pages/project-three.css
+++ b/pages/project-three.css
@@ -263,6 +263,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
     .project-img {
       width: 100%;
       max-width: 700px;
+      height: 100%;
     }
   }
 }
